# tcs-cli

./: README.md  pyproject.toml
tcs_cli/: cli.py  factory.py  strategy_pattern.py
tcs_cli/data/: docker.py  git.py  npm.py  pip.py  poetry.py  pyenv.py
