[tool.poetry]
name = "tcs-cli"
version = "0.1.0"
description = "Tools Cheat Sheet Command Line"
authors = ["Aluisio Lucio <aluisio18lucio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
typer = "^0.12.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
